Fix header icons and add actions spacing

--- a/webapp/app.css
+++ b/webapp/app.css
@@ -56,9 +56,7 @@ body{
 
 .profile{position:relative}
 .iconBtn{
-  position:absolute;
-  top:10px;
-  right:10px;
+  position:relative;
   width:38px;
   height:38px;
   border-radius:14px;
